<resources>
    <string name="app_name">SuitmediaTestAthar</string>
    <string name="welcome">Welcome</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email_gmail_com">email@gmail.com</string>
</resources>